# ContaraNAS

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IDEAS.md  LICENSE  README.md  TODO.md  claude.md  format.sh  main.py  pyproject.toml  requirements.txt  steamapps.py  test.py
.github/workflows/: docs.yml
ContaraNAS/: main.py
ContaraNAS/api/: app.py  commands.py  main.py  stream.py
ContaraNAS/api/routes/: __init__.py  modules.py  steam.py  (+1 more)
ContaraNAS/core/: event_bus.py  exceptions.py  module.py  module_manager.py  state_manager.py
ContaraNAS/gui/: dashboard.py
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/ContaraNAS/: __main__.py  main.py
backend/ContaraNAS/api/: __init__.py  app.py  auth.py  commands.py  requests.py  responses.py  stream.py
backend/ContaraNAS/api/routes/: __init__.py  auth.py  commands.py  marketplace.py  modules.py  state.py
backend/ContaraNAS/api/schemas/: __init__.py  components.py  ui.py
backend/ContaraNAS/cli/: __init__.py  installer.py  module.py  module_commands.py  server.py
backend/ContaraNAS/core/: __init__.py  config.py  event_bus.py  exceptions.py  logger.py  marketplace_client.py  module.py  module_manager.py  serialization.py  state_manager.py
backend/ContaraNAS/core/action/: __init__.py  decorator.py  dispatcher.py  results.py
backend/ContaraNAS/core/auth/: __init__.py  config.py  models.py  service.py
backend/ContaraNAS/core/module/: __init__.py  base.py  category.py  metadata.py  source.py  state.py
backend/ContaraNAS/core/security/: __init__.py  auth_service.py
backend/ContaraNAS/core/ui/: __init__.py  base.py  card.py  display.py  feedback.py  interactive.py  layout.py  modal.py
backend/ContaraNAS/core/utils/: __init__.py  cache_utils.py  logger.py
backend/ContaraNAS/modules/: __init__.py
backend/ContaraNAS/modules/builtin/steam/: README.md  __init__.py  constants.py  module.json
backend/ContaraNAS/modules/builtin/steam/controllers/: steam_controller.py
backend/ContaraNAS/modules/builtin/steam/dtos/: steam_game.py
backend/ContaraNAS/modules/builtin/steam/services/: cache_service.py  game_loader_service.py  image_service.py  library_service.py  manifest_handler.py  monitoring_service.py  parsing_service.py  path_service.py
backend/ContaraNAS/modules/builtin/steam/utils/: __init__.py  steam_helpers.py
backend/ContaraNAS/modules/builtin/steam/views/: __init__.py  helpers.py  modals.py  tile.py
backend/ContaraNAS/modules/builtin/sys_monitor/: README.md  __init__.py  constants.py  module.json
backend/ContaraNAS/modules/builtin/sys_monitor/controllers/: sys_monitor_controller.py
backend/ContaraNAS/modules/builtin/sys_monitor/dtos/: __init__.py  cpu_info.py  disk_info.py  mem_info.py
backend/ContaraNAS/modules/builtin/sys_monitor/services/: cpu_service.py  disk_service.py  hardware_cache_service.py  mem_service.py  monitoring_service.py
backend/ContaraNAS/modules/builtin/sys_monitor/services/linux/: __init__.py  cpu_service_linux.py  disk_service_linux.py  mem_service_linux.py
backend/ContaraNAS/modules/builtin/sys_monitor/services/windows/: __init__.py  cpu_service_windows.py  disk_service_windows.py  mem_service_windows.py
backend/ContaraNAS/modules/builtin/sys_monitor/views/: __init__.py  cpu_tab.py  disk_tab.py  helpers.py  memory_tab.py  modals.py  tile.py
backend/ContaraNAS/modules/steam/: __init__.py  constants.py  module.json
backend/ContaraNAS/modules/steam/controllers/: __init__.py  steam_controller.py
backend/ContaraNAS/modules/steam/services/: cache_service.py  game_loader_service.py  image_service.py  manifest_handler.py  monitoring_service.py  parsing_service.py
backend/ContaraNAS/modules/steam/utils/: __init__.py
backend/ContaraNAS/modules/sys_monitor/: __init__.py  constants.py  module.json
backend/ContaraNAS/modules/sys_monitor/controllers/: sys_monitor_controller.py
backend/ContaraNAS/modules/sys_monitor/dtos/: __init__.py
backend/ContaraNAS/modules/sys_monitor/services/: __init__.py  cpu_service.py  disk_service.py  hardware_cache_service.py  mem_service.py  monitoring_service.py
backend/ContaraNAS/modules/sys_monitor/services/linux/: cpu_service_linux.py  disk_service_linux.py  mem_service_linux.py
backend/ContaraNAS/modules/sys_monitor/services/windows/: cpu_service_windows.py  disk_service_windows.py  mem_service_windows.py
backend/api/: dashboard.py  modules.py  steam.py
backend/core/: module.py  module_manager.py
backend/core/utils/: cache_utils.py
backend/modules/steam/: __init__.py
backend/modules/steam/controllers/: steam_controller.py
backend/modules/steam/dto/: steam_game.py
backend/modules/steam/dtos/: steam_game.py
backend/modules/steam/manager/: steam_game.py  steam_game_manager.py
backend/modules/steam/services/: cache_service.py  parsing_service.py
backend/modules/steam/utils/: steam_helpers.py
backend/tests/: test_actions.py  test_auth_service.py  test_integration.py  test_module_integration.py  test_module_state.py  test_ui_components.py
backend/tests/performance/: conftest.py
core/: module.py
core/gui/: main_window.py
core/utils/: __init__.py  cache_loader.py  cache_utils.py  logger.py
docs/: mkdocs.yml
docs/docs/: index.md
frontend/: README.md  openapi.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/src/: app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
marketplace/: README.md  pyproject.toml  requirements.txt
marketplace/data/: registry.json
marketplace/server/: app.py  config.py  models.py
marketplace/server/routes/: __init__.py  modules.py  registry.py
modules/steam/: __init__.py
nas-manager/: package.json  pnpm-lock.yaml
nas-manager/src-tauri/: Cargo.toml  tauri.conf.json
pywrapper/: games_data.json
pywrapper/steam/: depot_info.py  main.py  steam_helpers.py  steamapps.py  steamapps_gui.py
rust_translation/nas_manager/: Cargo.toml
scripts/: clean.sh  generate-types.sh  generate_api_types.py
src/: main.py
src/core/: event_bus.py  exceptions.py  module.py  module_manager.py
src/gui/: dashboard.py
(+328 files in other folders)
