[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
authors = ["Sincos <optik@koolkdzonly.club>", "Alessandro Dorigo <dorigo.alessandro@gmail.com>"]
name = "contaranas"
version = "0.0.1"
description = "A modular desktop application for monitoring gaming services"
readme = "README.md"
packages= [{ include = "ContaraNAS"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pathlib = ">=1.0.1"
pydantic = ">=2.10.6"
pywebview = ">=5.4"
pygobject = ">=3.52.3"
nicegui = ">=2.21.1"
qtpy = ">=2.4.3"
watchdog = ">=6.0.0"
vdf = ">=3.4"
requests = ">=2.32.3"
psutil = ">=7.0.0"
pyside6 = "^6.9.2"


[tool.poetry.urls]
Homepage = "https://github.com/MihaiStreames/ContaraNAS"
Repository = "https://github.com/MihaiStreames/ContaraNAS.git"
Issues = "https://github.com/MihaiStreames/ContaraNAS/issues"

[tool.poetry.plugins."contaranas.modules"]
steam_module = "ContaraNAS.modules.steam:SteamModule"

[tool.poetry.plugins."contaranas.components"]
steam_components = "ContaraNAS.gui.components.steam.steam_tile:SteamTile"

# ========== BLACK (Formatter) ==========
[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = false

# ========== RUFF (Linter & Formatter) ==========
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "C",    # complexity
    "Q",    # flake8-quotes
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "S",    # bandit (security)
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "DTZ",  # flake8-datetimez
    "ERA",  # eradicate (commented code)
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "FLY",  # flynt (f-string conversion)
    "PIE",  # flake8-pie
    "COM",  # flake8-commas
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "RSE",  # flake8-raise
    "RUF",  # ruff-specific rules
]

ignore = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D400",    # First line should end with a period
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "E501",    # Line too long
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicitly concatenated string literals
    "D415",    # First line should end with a period, question mark, or exclamation point
    "N802",    # Function name should be lowercase
    "N806",    # Variable in function should be lowercase
    "D107",    # Missing docstring in __init__
    "T201",    # print found (using this in main)
    "INP001",  # Implicit namespace packages
    "G004",    # Logging statement uses f-string
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["ContaraNAS"]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true